--- a/.env
+++ b/.env
@@ -6,4 +6,5 @@ COLLECTION_ATTENDANCE=attendance_registery
 COLLECTION_IP_LOGS=ip_registery_logs
 COLLECTION_REGISTERED_IP=registered_ip_registery
 
+COLLECTION_PUBLICKEY=public_key_registery
 
