--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_STR=mongodb+srv://Agri:Hariharan@agri.tevb0vb.mongodb.net/?retryWrites=true&w=majority
+MONGO_STR=mongodb://127.0.0.1:27017/ISM
 DB=ISM
 
 COLLECTION_ATTENDANCE=attendance_registery
